[package]
name = "connected-spv"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
atty = { version = "0.2" }
chrono = { version = "0.4", features = ["std"], default-features = false }
colored = "1.9"
log = { workspace = true }
nakamoto-client = { version = "0.4.0" }
nakamoto-net = { version = "0.4.0" }
nakamoto-net-poll = { version = "0.4.0" }
nakamoto-p2p = { version = "0.4.0" }
serde.workspace = true
substrate-api-client = "0.17.0"
thiserror = "1.0"
toml = "0.8.10"

# async
tokio = { workspace = true, features = [
	"macros",
	"rt-multi-thread",
	"signal",
	"fs",
] }

# submit extrinsics
eyre = "0.6.8"
subxt-signer.workspace = true
subxt.workspace = true
