[package]
name = "whitelistcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { }
parity-scale-codec = {}
schnorrkel = { }
ethers = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }

clap = { version = "4.0", features = ["derive"] }
tokio = { features = ["rt-multi-thread"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
