[package]
name = "pallet-xvm"
authors = ["Stake Technologies"]
edition = "2021"
version = "0.2.1"

[dependencies]
impl-trait-for-tuples = "0.2"
log = { version = "0.4", default-features = false }
serde = { workspace = true, optional = true }

# Substrate
scale-codec = { package = "parity-scale-codec", workspace = true, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true, default-features = false }

# EVM support 
pallet-evm = { workspace = true, default-features = false, optional = true, features = ["forbid-evm-reentrancy"] }

# Substrate WASM VM support
pallet-contracts = { workspace = true, default-features = false, optional = true }

[dev-dependencies]

[features]
default = ["std"]
evm = [
	"pallet-evm",
]
wasm = [
	"pallet-contracts",
]
std = [
	"scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-contracts/std",
	"pallet-evm/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]
