[package]
name = "eth-light-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2.workspace = true
env_logger.workspace = true
envy.workspace = true
ethers.workspace = true
eyre.workspace = true
helios.workspace = true
log.workspace = true
merkle-cbt.workspace = true
rusqlite.workspace = true
salvo.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
tokio.workspace = true

[dev-dependencies]
hex-literal.workspace = true
